Forbid Tokens At Line End Check

--- a/eclipsecs-sevntu-plugin/src/com/github/sevntu/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/eclipsecs-sevntu-plugin/src/com/github/sevntu/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -54,6 +54,10 @@ ForbidReturnInFinalBlockCheck.desk = Verifies the finally block design
 ForbidThrowAnonymousExceptionsCheck.name = Forbid Throw Anonymous Exceptions
 ForbidThrowAnonymousExceptionsCheck.desc = <p>Forbid throwing anonymous exception. limitation: This Check does not validate cases then Exception object is created before it is thrown.<br/>For example:</p><code><pre>catch (Exception e) {<br/>   throw new RuntimeException() { //anonymous exception<br/>    //some code<br/>   };</code></pre>
 
+ForbidTokensAtLineEndCheck.name = Forbid Tokens At Line End
+ForbidTokensAtLineEndCheck.desc = Forbids specified tokens at line end.<br><b>Rationale:</b> this Check is needed to help user make code more readable<br>Specified tokens can be set through the Check's property <b>(forbidTokensAtLineEndRegex)</b><br>Property is a regular expression, default value: "([.,|+*&#8260;\\-=]|(&&|\\|\\||=\=))"<br>Forbidden tokens by default are: ".", ",", "|", "+", "*", "&", "\", "-", "=", "&&", "||", "=="<br>User also can forbid specified end of line by the addition of default regular expression<br><b>Example:</b><br>([.,|+*/\-=]|(&&|\|\||=\=)|(SOME_SPECIFIED_SEQUENCE_AT_LINE_END))<br>@author <a href="mailto:nesterenko-aleksey@list.ru">Aleksey Nesterenko</a>
+ForbidTokensAtLineEndCheck.forbidTokensAtLineEndRegex = Regular expression which matches the last token of the string
+
 IllegalCatchExtended.name = Illegal Catch Check Extended
 IllegalCatchExtended.desc = Check for illegal catch but with option to ignore these catches in some cases
 IllegalCatchExtended.allowThrow = Allow catching when throwing some exception
@@ -81,9 +85,10 @@ MultipleStringLiteralsExtended.ignoreStringsRegexp     = Regexp pattern for igno
 MultipleStringLiteralsExtended.name                    = Multiple String Literals Extended
 MultipleStringLiteralsExtended.highlightAllDuplicates  = Check to highlight all dublicates
 
-NestedTernaryCheck.name = Nested Ternary Check
-NestedTernaryCheck.desc = Highlights the usage of nested ternary operators. <br>Example of nested ternary operator: <br><p><code>final int d = (a == b) ? (a == b) ? 5 : 6 : 6;</code></p>
-NestedTernaryCheck.ignoreFinal = Ignore nested ternary operators which are used for assigning the final variables. This option doesn`t ignore nested ternary operators which initializes final variables in constructors.
+TernaryPerExpressionCountCheck.name = Ternary Per Expression Check
+TernaryPerExpressionCountCheck.desc = Restricts the number of ternary operators in expression to a specified limit.<br>Limit is a Check's property (<b>maxTernaryPerExpressionCount)</b><br><b>Rationale:</b> this Check is needed to help user avoid unobvious behavior of the code block.<br>because of misunderstanding of ternary operators priority<br>to help user follow any code convention if it is prohibited to use specified number of ternary<br>operators per expression<br>Cases, which have unobvious results:<br>1. String concatenation with calling more than X ternary calculations<br>Example:<p><code>String str = null;<br>String x = str != null ? "A" : "B" + str == null ? "C" : "D";<br>System.out.println(x);</code></p>Output is "D", but expected was "BC".<br>2. Nested mathematical calculations based on more than one ternary operator (based on X ternary operators)<br>  Example:<p><code>final int d = (a == b) ? (a == b) ? 5 : 6 : 6;</code></p>Also there're some cases, when check highlights strange part of expression, you can see the example in the bugreport <a href="https://github.com/sevntu-checkstyle/sevntu.checkstyle/issues/184">issue</a><br>@author <a href="mailto:nesterenko-aleksey@list.ru">Aleksey Nesterenko</a>
+TernaryPerExpressionCountCheck.maxTernaryPerExpressionCount = Maximum number of ternary operators in expression
+TernaryPerExpressionCountCheck.ternaryInBraces = Ignore ternary operators in expression in case if priority level is set explicitly.
 
 NoMainMethodInAbstractClass.name = No Main Method In Abstract Class
 NoMainMethodInAbstractClass.desc = Checks if an abstract class does not have "main()" method, because it can mislead a developer to consider this class as a ready-to-use implementation
